添加NativeImage支持